# ScratchingPost

./: .gitignore  HANDOFF.md  README.md  conftest.py  pyproject.toml
docs/: ARCHITECTURE.md  MODULE_CONTRACT.md  ROADMAP.md
modules/: README.md  __init__.py
modules/dispatch/: __init__.py  wazuh.py
modules/emulation/: __init__.py  apple_builtin.py
modules/static/: __init__.py  code_identity.py  macho.py  module.py
orchestrator/: README.md  __init__.py  conductor.py
orchestrator/contracts/: __init__.py  events.py  indicator.py  module.py  process.py  sample.py
orchestrator/detonation/: __init__.py  api.py  vm.py
orchestrator/pipeline/: __init__.py  host.py  replay.py
orchestrator/scoring/: __init__.py  report.py  score.py
profiles/: README.md  build_appliance.sh  build_appliance_parallels.sh  provision_guest.sh
profiles/wazuh/: BUILD_GOLDEN.md  README.md  local_decoder.xml  local_rules.xml  ossec.conf.snippet
samples/behavior/: README.md  build.sh  inject_taskport  inject_taskport.c  persist_launchagent  persist_launchagent.c
sensors/: README.md  __init__.py
sensors/eslogger/: __init__.py  parser.py  recorder.py
tests/: support.py  test_apple_builtin.py  test_code_identity.py  test_conductor.py  test_contracts.py  test_detonation_api.py  test_eslogger_parser.py  test_macho.py  test_pipeline_replay.py  test_scoring.py  test_static_module.py  test_vm_provider.py  test_wazuh_dispatch.py  test_wazuh_e2e.py  test_wazuh_live.py  test_wazuh_rules.py
tests/fixtures/eslogger/: real_tahoe_capture.jsonl  sample_capture.jsonl
web/: README.md
(+3 files in other folders)
